--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "REST API for Task Manager Application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,13 @@
   },
   "homepage": "https://github.com/sasongkoadi/task-manager#readme",
   "dependencies": {
-    "mongodb": "^3.6.2"
+    "express": "^4.17.1",
+    "mongodb": "^3.6.2",
+    "mongoose": "^5.10.13",
+    "validator": "^13.1.17"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.7",
+    "nodemon": "^2.0.6"
   }
 }
